tests/comp/sem/invalid/subscript_with_ref.mj
class A {

	public void test(int[] foo) {
		A a;
		/*** foo[a]; ***/
	}

	public static void main(String[] args) {
	}

}
